# GitNexus

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.cli  Dockerfile.graphs  INVENTORY.md  README.md  ROADMAP.md  SOVEREIGN.md  cohabitation.config.json  docker-compose.test.yml  docker-compose.yml  elysium.json  package.json  reindex.ps1  roadmap.yml  start-elysium.bat  start.bat  start.ps1  stop.bat  stop.ps1  wiki-worker.mjs
gitnexus-web/: package-lock.json  package.json
graphs-sidecar/: kuzu-store.mjs  package-lock.json  package.json  render-map.mjs  server.mjs
mcp-server/: README.md  package.json  server.mjs  server.test.mjs  smoke.mjs
mcp-server/sdk-py/: .gitignore  CHANGELOG.md  PUBLISH.md  README.md  pyproject.toml
mcp-server/sdk-py/.github/workflows/: publish-pypi.yml
mcp-server/sdk-py/src/gitnexus_copilot/: __init__.py  types.py
mcp-server/sdk-py/tests/: test_auth.py  test_client.py
patches/: README.md  additive-files.diff  bump-dry-run-main.md  bump-dry-run-v1.6.7.md  example-gitnexus-domains.json  example-gitnexus-policy.json  example-gitnexus.json  graph-templates-stage1.diff  graph-templates-stage1.md  inplace-edits.diff  upstream-all.diff
scripts/: apply-upstream-patches.mjs  bump-upstream.mjs  check-patch-drift.mjs  check-test-inventory.mjs  check-upstream-releases.mjs  ghost-from-spec-parser.mjs  ghost-from-spec-roadmap.mjs  ghost-from-spec.mjs  install-brainstorm-hooks.mjs  patch-handler-log-niveau2-all.mjs  patch-handler-log-on-reject.mjs  patch-incremental-dump.mjs  patch-lbug-staleness.mjs  smoke.mjs  (+3 more)
(+327 files in other folders)
